# Django4

./: .pylintrc  .python-version  Pipfile  db.sqlite3  mypy.ini  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
_archived/: .pylintrc  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  layout.html  results.html
tools/: pyproject.toml  requirements.txt
